# sdl2_practice

./: CMakeLists.txt  vcpkg.json
apps/: CMakeLists.txt
apps/01_skeleton/: CMakeLists.txt  main.cpp
apps/02_artist/: CMakeLists.txt  main.cpp
apps/03_grid/: CMakeLists.txt  main.cpp
apps/04_pulsing_square/: CMakeLists.txt  main.cpp
apps/05_first_character/: CMakeLists.txt  color.h  main.cpp  main.h
apps/06_pixel_brush/: CMakeLists.txt  main.cpp  main.h
apps/07_bouncing_image/: CMakeLists.txt  main.cpp  main.h
apps/08_delta_time/: CMakeLists.txt  main.cpp  main.h
apps/09_static_noise/: CMakeLists.txt  main.cpp  main.h
apps/10_gpu_paint/: CMakeLists.txt  main.cpp  main.h
